Get /stats retorna ordenado por total e avg. Atualizado a lib dvl-core.1.0.4